# amsynth

src/: AudioOutput.cc  AudioOutput.h  JackOutput.cc  Parameter.h  Preset.cc  VoiceAllocationUnit.cc  VoiceAllocationUnit.h  main.cc  ptest.cc
src/Effects/: Distortion.cc  Distortion.h  Reverb.cc  Reverb.h  SoftLimiter.cc  SoftLimiter.h
src/GUI/: GUI.cc  PresetControllerView.cc
src/VoiceBoard/: ADSR.cc  ADSR.h  Adder.cc  Adder.h  AmpSection.cc  AmpSection.h  Amplifier.cc  Amplifier.h  Distortion.cc  Distortion.h  FValue.cc  FValue.h  FilterControlSignal.cc  FilterControlSignal.h  FreqControlSignal.cc  FreqControlSignal.h  Limiter.cc  Limiter.h  LowPassFilter.cc  LowPassFilter.h  Makefile.am  Mixer.cc  Mixer.h  Multiplier.cc  Multiplier.h  NFValue.cc  NFValue.h  Oscillator.cc  Oscillator.h  ProcessAndHold.cc  ProcessAndHold.h  Reverb.cc  Reverb.h  SoftLimiter.cc  SoftLimiter.h  Synth--.h  VoiceBoard.cc  VoiceBoard.h
