noinst_LIBRARIES = libVoiceBoard.a

libVoiceBoard_a_SOURCES = \
			ADSR.cc ADSR.h \
			Amplifier.cc Amplifier.h \
			FValue.cc FValue.h \
			NFValue.cc NFValue.h \
			Oscillator.cc Oscillator.h \
			VoiceBoard.cc VoiceBoard.h \
			Mixer.cc Mixer.h \
			Multiplier.cc Multiplier.h \
			LowPassFilter.cc LowPassFilter.h \
			ProcessAndHold.cc ProcessAndHold.h \
			FreqControlSignal.cc FreqControlSignal.h \
			AmpSection.cc AmpSection.h \
			Synth--.h
